crates/rlf-macros/tests/fail/phrase_selector_no_call.rs
use rlf::rlf;

rlf! {
    cards($n) = "{$n} cards";
    bad = "{cards:other}";
}

fn main() {}
