crates/rlf-macros/tests/fail/phrase_selector_no_call.stderr
error: 'cards' is a phrase — use cards(...):other
 --> tests/fail/phrase_selector_no_call.rs:5:11
  |
5 |     bad = "{cards:other}";
  |           ^^^^^^^^^^^^^^^
